--- a/pages/index.css
+++ b/pages/index.css
@@ -5,4 +5,5 @@
 @import url("../blocks/header.css");
 @import url("../blocks/intro.css");
 @import url("../blocks/gallery.css");
+@import url("../blocks/places.css");
 @import url("../blocks/footer.css");
