--- a/pages/index.css
+++ b/pages/index.css
@@ -6,4 +6,5 @@
 @import url("../blocks/intro.css");
 @import url("../blocks/gallery.css");
 @import url("../blocks/places.css");
+@import url("../blocks/place.css");
 @import url("../blocks/footer.css");
