--- a/blocks/place.css
+++ b/blocks/place.css
@@ -62,7 +62,7 @@
 
 .place__link-button {
   padding: 18px 30px;
-  background: linear-gradient(90deg, #0278fe40 0%, #003a7b40 99.98%);
+  background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
   border-radius: 5px;
   box-shadow: 5px 5px 10px #00000040;
   color: #fff;
